...
            "suggestedSide": "%@ suggested",
            "switchLabel": "Switch",
            "syncedDaysAgo": "Synced %dd ago",
            "syncedHoursAgo": "Synced %dh ago",
            "syncing": "Syncing...",
            "tapToLog": "Tap to log",
            "tapToStart": "Tap to start",
            "timeAgo": "%@ ago",
            "timerRunningDiaper": "%@ is being changed",
            "timerRunningFeeding": "%@ is feeding",
            "timerRunningPausedSuffix": "%@ (paused)",
            "timerRunningPumping": "%@ is pumping",
            "timerRunningSleep": "%@ is sleeping",
...
